--- a/frontend/scss/_contact.scss
+++ b/frontend/scss/_contact.scss
@@ -7,7 +7,6 @@
     margin-bottom: 40px;
     box-sizing: border-box;
     background-color: $white;
-    background-color: yellow;
     @media(max-width: 1199px) {
         min-height: 480px;
         padding-left: 95px/1200px * 100%;
@@ -29,6 +28,8 @@
         }
     }
     &__item {
+      position: relative;
+      z-index: 1;
         display: block;
         float: left;
         width: 28%;
@@ -82,10 +83,10 @@
     &::after {
         content: '';
         position: absolute;
-        z-index: -1;
+        z-index: 0;
         bottom: -125px;
         left: 0;
-        background: linear-gradient(to left bottom, yellow 50%, transparent 50%);
+        background: linear-gradient(to left bottom, $white 50%, transparent 50%);
         height: 125px;
         width: 50%;
         @media(max-width: 1199px) {
@@ -100,10 +101,10 @@
     &::before {
         content: '';
         position: absolute;
-        z-index: -1;
+        z-index: 0;
         bottom: -125px;
         right: 0;
-        background: linear-gradient(to right bottom, yellow 50%, transparent 50%);
+        background: linear-gradient(to right bottom, $white 50%, transparent 50%);
         height: 125px;
         width: 50%;
         @media(max-width: 1199px) {
